--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
+            <img src="content://com.nishionline.cordovaExpansion/images/bignumber.png" width="256">
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
